fixed broken layout

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -2,10 +2,13 @@ html,
 body,
 #__next {
     height: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 html {
-    font-size: 1.25rem
+    font-size: 1.25rem;
+    background-color: #141414;
 }
 
 * {
@@ -34,11 +37,9 @@ h2 {
 }
 
 
-.container {
-    width: 90%;
-
-    @media (min-width: 768px) {
-        width: 50%;
+@media (min-width: 768px) {
+    .container {
+        width: 57%;
         max-width: 800px;
     }
 }
